fix: adiciona wrap ao titulo

--- a/src/assets/css/last-posts.css
+++ b/src/assets/css/last-posts.css
@@ -23,7 +23,6 @@
 }
 .last-posts ol h3 {
   font-size: var(--font-size-base);
-  white-space: nowrap;
 }
 .last-posts ol a {
   text-decoration: none;
